--- a/my/account-authentication.html
+++ b/my/account-authentication.html
@@ -35,7 +35,7 @@
 				<span><b></b></span>
 			</li>
 		</ul>
-		<button class="next-button authentication-button">下一步</button>
+		<div class="next-button authentication-button">下一步</div>
 	</section>
 	<!-- content end -->
 
