--- a/details/quality-project-details.html
+++ b/details/quality-project-details.html
@@ -79,7 +79,10 @@
 			<p class="details-introduce">公司自有资金对成熟项目的开发建设，企业改制扩建，产品及设备升级，业务扩展等项目青睐。具体根据项目的行业类型、盈利能力、企业的合作基础因素综合论证而定。</p>
 		</div>
 		<div class="details-unit details-p b5 clear details-unit-mb">
-			<h2 class="l-border">&nbsp;</h2>
+			<h2 class="l-border" style="color:#666;">
+				用户留言&nbsp;
+				(<span style="color:#00b1e4;">11</span>)
+			</h2>
 			<form>
 				<textarea placeholder="提示：严禁发布含有联系方式和广告性质的内容，违者一律删除！"></textarea>
 				<button class="project-button fr" type="submit">发布留言</button>
