--- a/details/reward-details.html
+++ b/details/reward-details.html
@@ -62,7 +62,7 @@
 		<div class="details-unit b5">
 			<p class="details-pft">附件下载：
 				<span class="download-img"><img src="../images/details/download.png" width="100%" height="100%"></span>
-				<input class="download-file" type="file"><input class="download-file-text" type="text" name="" placeholder="需求文档.docx">
+				<input class="download-file-text" type="button" name="" value="需求文档.docx">
 			</p>
 		</div>
 		<div class="details-title">立即揭标</div>
