--- a/lists/bk-college.html
+++ b/lists/bk-college.html
@@ -139,31 +139,31 @@
 
 			<div class="list_box article_banner mt2">
 				<div class="swiper-wrapper">
-		        	<div class="swiper-slide">
+		        	<div class="swiper-slide clear">
 		        		<a href="javascript:;">
-							<div class="left_img">
+							<div class="left_img fl">
 								<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
 							</div>
-							<div class="right_content">
+							<div class="right_content fl">
 								<h4>紫禁之巅，极致智云</h4>
 								<p>云栖大会北京峰会震撼来袭！8月8日-9日，出没前言技术脉搏，洞见计算未来趋势，火速报名！</p>
 							</div>
 						</a>
 					</div>
-					<div class="swiper-slide">
-						<div class="left_img">
+					<div class="swiper-slide clear">
+						<div class="left_img fl">
 							<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
 						</div>
-						<div class="right_content">
+						<div class="right_content fl">
 							<h4>紫禁之巅，极致智云</h4>
 							<p>云栖大会北京峰会震撼来袭！8月8日-9日，出没前言技术脉搏，洞见计算未来趋势，火速报名！</p>
 						</div>
 					</div>
-					<div class="swiper-slide">
-						<div class="left_img">
+					<div class="swiper-slide clear">
+						<div class="left_img fl">
 							<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
 						</div>
-						<div class="right_content">
+						<div class="right_content fl">
 							<h4>紫禁之巅，极致智云</h4>
 							<p>云栖大会北京峰会震撼来袭！8月8日-9日，出没前言技术脉搏，洞见计算未来趋势，火速报名！</p>
 						</div>
@@ -181,36 +181,36 @@
 					</a>
 				</h3>
 				<ul class="wz_list">
-					<li>
+					<li class="clear">
 						<a href="javascript:;">
-							<div class="information_img">
+							<div class="information_img fl">
 								<img src="../images/lists/zx1.png" width="100%" height="100%" alt="" />
 							</div>
-							<div class="information_content">
+							<div class="information_content fl">
 								<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 								</h4>
 								<p>【云分享】</p>
 							</div>	
 						</a>
 					</li>
-					<li>
+					<li class="clear">
 						<a href="javascript:;">
-							<div class="information_img">
+							<div class="information_img fl">
 								<img src="../images/lists/zx2.png" width="100%" height="100%" alt="" />
 							</div>
-							<div class="information_content">
+							<div class="information_content fl">
 								<h4 class="c1">云栖论坛首个技术专栏开启，速来围观！
 								</h4>
 								<p>【开发者交流】</p>
 							</div>	
 						</a>
 					</li>
-					<li>
+					<li class="clear">
 						<a href="javascript:;">
-							<div class="information_img">
+							<div class="information_img fl">
 								<img src="../images/lists/zx3.png" width="100%" height="100%" alt="" />
 							</div>
-							<div class="information_content">
+							<div class="information_content fl">
 								<h4 class="c1">
 								大图网站的优化技巧收集
 								</h4>
@@ -218,24 +218,24 @@
 							</div>	
 						</a>
 					</li>
-					<li>
+					<li class="clear">
 						<a href="javascript:;">
-							<div class="information_img">
+							<div class="information_img fl">
 								<img src="../images/lists/zx4.png" width="100%" height="100%" alt="" />
 							</div>
-							<div class="information_content">
+							<div class="information_content fl">
 								<h4 class="c1">一淘宝专家苍龙带你聊聊PHP性能之路
 								</h4>
 								<p>【云分享】</p>
 							</div>	
 						</a>
 					</li>
-					<li>
+					<li class="clear">
 						<a href="javascript:;">
-							<div class="information_img">
+							<div class="information_img fl">
 								<img src="../images/lists/zx5.png" width="100%" height="100%" alt="" />
 							</div>
-							<div class="information_content">
+							<div class="information_content fl">
 								<h4 class="c1">
 									读书频道热门活动速来参加！
 								</h4>
@@ -294,36 +294,36 @@
 				<div class="wz_tabs">
 					<!-- 学术发表 start -->
 					<ul class="wz_list">
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/xsfb1.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
 								</div>	
 							</a>
 						</li>
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/xsfb2.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
 								</div>	
 							</a>
 						</li>
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/xsfb3.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
@@ -335,24 +335,24 @@
 
 					<!-- 案例分析 start -->
 					<ul class="wz_list" style="display:none;">
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/xsfb2.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
 								</div>	
 							</a>
 						</li>
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/xsfb3.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
@@ -364,24 +364,24 @@
 
 					<!-- 商业计划书 start -->
 					<ul class="wz_list" style="display:none;">
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/zx1.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
 								</div>	
 							</a>
 						</li>
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/zx1.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
@@ -393,36 +393,36 @@
 
 					<!-- 研究指导 start -->
 					<ul class="wz_list" style="display:none;">
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/zx1.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
 								</div>	
 							</a>
 						</li>
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/zx1.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
 								</div>	
 							</a>
 						</li>
-						<li>
+						<li class="clear">
 							<a href="javascript:;">
-								<div class="information_img">
+								<div class="information_img fl">
 									<img src="../images/lists/zx1.png" width="100%" height="100%" alt="" />
 								</div>
-								<div class="information_content">
+								<div class="information_content fl">
 									<h4 class="c1">听说南海某国官网被黑，说说你的防黑秘诀
 									</h4>
 									<p>【云分享】</p>
@@ -443,12 +443,12 @@
 		var wrapWidth = $(".list_box").find(".swiper-slide").length*300;
 		$('.list_box .swiper-wrapper').width(wrapWidth+"%");
 
-		var swiper = new Swiper('.article_banner',{
-		    pagination: '.pagination',
-		    paginationClickable:true,
-		    loop:true,
-		    autoplay:3000
-		});
+		// var swiper = new Swiper('.article_banner',{
+		//     pagination: '.pagination',
+		//     paginationClickable:true,
+		//     loop:true,
+		//     autoplay:3000
+		// });
 	</script>
 </body>
 </html>
