--- a/my/Select_bank_card.html
+++ b/my/Select_bank_card.html
@@ -17,7 +17,7 @@
 <body>
 	<!-- head start -->
 	<header class="header psa clear bg-color1 bg-color3">
-		<span class="back-button bankcard" onclick="history.go(-1)">
+		<span class="back-button" onclick="history.go(-1)">
 			<i></i>
 			选择银行卡
 		</span>
@@ -28,38 +28,38 @@
 	<!-- content start -->
 	<section class="mt9">
 		<ul class="set_password balance_payments bank_card_box">
-			<li class="set_password_item balance_payments_item remove_active select_active">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active select_active clear">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/payments1.png" width="100%" height="100%"/>
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>中国建设银行</p>
 					<span>（尾号5850）</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item remove_active">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active clear">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/jtyh_img.png" width="100%" height="100%"/>
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>交通银行储蓄卡</p> 
 					<span>（尾号5850）</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item remove_active">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active clear">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/zgyh_img.png" width="100%" height="100%"/>
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>中国银行储蓄卡</p>
 					<span>（尾号5850）</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item remove_active">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active clear">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/gsyh_img.png" width="100%" height="100%"/>
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>中国工商银行储蓄卡</p>
 					<span>（尾号5850）</span>
 				</div>
