--- a/my/account-recharge.html
+++ b/my/account-recharge.html
@@ -27,11 +27,11 @@
 	<!-- content start -->
 	<section class="mt9">
 		<div style="padding-bottom:0.4rem;"></div>
-		<div class="select_bank">
-			<div class="select_bank_img">
+		<div class="select_bank clear">
+			<div class="select_bank_img fl">
 				<img src="../images/my/payments1.png" width="100%" height="100%">
 			</div>
-			<div class="select_bank_description">
+			<div class="select_bank_description fl">
 				<p>中国建设银行</p>
 				<span>尾号5850</span>
 			</div>
@@ -53,38 +53,38 @@
 	<div class="setHead_mask">
 		<div class="select_payment_close"><i>×</i>选择付款方式</div>
 		<ul class="set_password balance_payments bank_card_box select_payment">
-			<li class="set_password_item balance_payments_item remove_active select_active" style="margin-top:0.9rem;">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active select_active clear" style="margin-top:0.9rem;">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/payments1.png" width="100%" height="100%">
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>中国建设银行</p>
 					<span>（尾号5850）</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item remove_active">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active clear">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/jtyh_img.png" width="100%" height="100%">
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>交通银行储蓄卡</p> 
 					<span>（尾号5850）</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item remove_active">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active clear">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/zgyh_img.png" width="100%" height="100%">
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>中国银行储蓄卡</p>
 					<span>（尾号5850）</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item remove_active">
-				<div class="balance_payments_img bank_card_img">
+			<li class="set_password_item balance_payments_item remove_active clear">
+				<div class="balance_payments_img bank_card_img fl">
 					<img src="../images/my/gsyh_img.png" width="100%" height="100%">
 				</div>
-				<div class="balances bank_card_msg">
+				<div class="balances bank_card_msg fl">
 					<p>中国工商银行储蓄卡</p>
 					<span>（尾号5850）</span>
 				</div>
