--- a/my/account-settings.html
+++ b/my/account-settings.html
@@ -27,9 +27,9 @@
 	<!-- content start -->
 	<section class="mt9">
 		<ul class="account-settings">
-			<li class="setting_item">
+			<li class="setting_item clear set_head">
 				头像
-				<div class="setting_head_img">
+				<div class="setting_head_img fr">
 					<img src="../images/my/user_headImg.png" width="100%" height="100%" alt="">
 				</div>
 			</li>
@@ -39,9 +39,9 @@
 			<li class="setting_item">
 				密码设置
 			</li>
-			<li class="setting_item">
+			<li class="setting_item clear">
 				手机号
-				<span class="settings_item_num">
+				<span class="settings_item_num fr">
 					186****6028
 				</span>
 			</li>
