--- a/my/balance_withdrawal.html
+++ b/my/balance_withdrawal.html
@@ -27,11 +27,11 @@
 	<!-- content start -->
 	<section class="mt9">
 		<div style="padding-bottom:0.4rem;"></div>
-		<div class="select_bank">
-			<div class="select_bank_img">
+		<div class="select_bank clear">
+			<div class="select_bank_img fl">
 				<img src="../images/my/payments1.png" width="100%" height="100%">
 			</div>
-			<div class="select_bank_description">
+			<div class="select_bank_description fl">
 				<p>中国建设银行</p>
 				<span>尾号5850</span>
 			</div>
