--- a/my/add-bank-card1.html
+++ b/my/add-bank-card1.html
@@ -17,7 +17,7 @@
 <body>
 	<!-- head start -->
 	<header class="header psa clear bg-color1 bg-color3">
-		<span class="back-button bankcard" onclick="history.go(-1)">
+		<span class="back-button" onclick="history.go(-1)">
 			<i></i>
 			添加银行卡
 		</span>
