--- a/my/balance-payments.html
+++ b/my/balance-payments.html
@@ -27,41 +27,41 @@
 	<!-- content start -->
 	<section class="mt9">
 		<ul class="set_password balance_payments">
-			<li class="set_password_item balance_payments_item">
-				<div class="balance_payments_time">
+			<li class="set_password_item balance_payments_item clear">
+				<div class="balance_payments_time fl">
 					<p>今天</p>
 					<time>13:20</time>
 				</div>
-				<div class="balance_payments_img">
+				<div class="balance_payments_img fl">
 					<img src="../images/my/payments1.png" width="100%" height="100%" />
 				</div>
-				<div class="balances">
+				<div class="balances fl">
 					<p>300.00</p>
 					<span>余额提现</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item">
-				<div class="balance_payments_time">
+			<li class="set_password_item balance_payments_item clear">
+				<div class="balance_payments_time fl">
 					<p>今天</p>
 					<time>10:09</time>
 				</div>
-				<div class="balance_payments_img">
+				<div class="balance_payments_img fl">
 					<img src="../images/my/payments1.png" width="100%" height="100%" />
 				</div>
-				<div class="balances">
+				<div class="balances fl">
 					<p>800.00</p>
 					<span>账户充值</span>
 				</div>
 			</li>
-			<li class="set_password_item balance_payments_item">
-				<div class="balance_payments_time">
+			<li class="set_password_item balance_payments_item clear">
+				<div class="balance_payments_time fl">
 					<p>今天</p>
 					<time>10:09</time>
 				</div>
-				<div class="balance_payments_img">
+				<div class="balance_payments_img fl">
 					<img src="../images/my/payments2.png" width="100%" height="100%" />
 				</div>
-				<div class="balances">
+				<div class="balances fl">
 					<p>+800.00</p>
 					<span>武汉市某某公司</span>
 				</div>
