添加页面与兼容处理

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="javascript:;">
+							<a href="details/financial-support-details.html">
 								<i></i>
 								<span>
 									金融支持
