--- a/my/information-perfect.html
+++ b/my/information-perfect.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" style="font-size: 55px;"><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=0, user-scalable=no">
