--- a/my/my.html
+++ b/my/my.html
@@ -24,24 +24,24 @@
 
 	<!-- content start -->
 	<section class="mtop-btm container">
-		<header class="my_head_wrap">
-			<div class="my_head_img">
+		<header class="my_head_wrap clear">
+			<div class="my_head_img fl">
 				<img src="../images/my/heda_img.png" width="100%" height="100%" />
 			</div>
-			<div class="my_name">
+			<div class="my_name fl">
 				<h4>silently2016</h4>
 				<span>156****6028</span>
 			</div>
 		</header>
 		<div class="my_balance b5">
 			<div class="my_balance_ck">
-				<b>9,000,807,68</b>
+				<b>9,000,807.68</b>
 				<i></i>
 			</div>
 			<div class="my_balance_wrap">
 				<div class="my_balance_item ky_blance">
-					<i></i>
-					<p>
+					<i class="fl"></i>
+					<p class="fl">
 						<span class="my_balance_names">
 							可用余额
 						</span>
@@ -51,8 +51,8 @@
 					</p>
 				</div>
 				<div class="my_balance_item dj_blance">
-					<i></i>
-					<p>
+					<i class="fl"></i>
+					<p class="fl">
 						<span class="my_balance_names">
 							冻结金额
 						</span>
@@ -69,7 +69,7 @@
 		</div>
 		<div class="class_items b5 item_jyjl">
 			<span><i></i>交易记录</span>
-			<span class="ck_all_jyjl">查看所有交易</span>
+			<span class="ck_all_jyjl fr">查看所有交易</span>
 		</div>
 		<ul class="jy_list">
 			<li>
@@ -125,6 +125,16 @@
 		jumpPage($(".footer ul").find("li").eq(1),"../lists/Bidding-Hall-list.html");
 		jumpPage($(".footer ul").find("li").eq(2),"../lists/Reward-Hall-list.html");
 		jumpPage($(".item_setting"),"account-settings.html");
+
+		$(".my_balance_ck i").click(function(){
+			var txt = $('.my_balance_ck b').text();
+			if(txt === "********"){
+				//发送一个请求，查账户余额，返回至此
+				$(".my_balance_ck b").text("9,000,807.68");
+			}else{
+				$(".my_balance_ck b").text("********");
+			};
+		});
 	</script>
 </body>
 </html>
