--- a/index.html
+++ b/index.html
@@ -243,88 +243,90 @@
 		<!-- 推荐服务商 start -->
 		<div class="Service_provider b5 mr8 server_content">
 			<h3 class="title_name">推荐服务商</h3>
-			<ul class="clear">
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>安恒信息技术有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>深信服电子科技有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>华耀(中国)科技有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>安恒信息技术有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>深信服电子科技有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>华耀(中国)科技有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>安恒信息技术有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>深信服电子科技有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>华耀(中国)科技有限公司</p>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>华耀(中国)科技有限公司</p>
-					</a>
-				</li>
-			</ul>
+			<div class="zyhp_box">
+				<ul class="clear tjfws_wrap">
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>安恒信息技术有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>深信服电子科技有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>华耀(中国)科技有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>安恒信息技术有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>深信服电子科技有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>华耀(中国)科技有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>安恒信息技术有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>深信服电子科技有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>华耀(中国)科技有限公司</p>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>华耀(中国)科技有限公司</p>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<!-- 推荐服务商 end -->
 
@@ -399,47 +401,49 @@
 		<!-- 技术服务 start -->
 		<div class="Service_provider technical_service b5 mr8">
 			<h3 class="title_name">技术服务</h3>
-			<ul class="clear">
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>武汉知识产权代理有限公司</p>
-						<div class="ts_description ma c2">
-							描述：<span>
-								接受国内、港澳台地区的企业单位及个人的委托	
-							</span>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>武汉知识产权代理有限公司</p>
-						<div class="ts_description ma c2">
-							描述：<span>
-								接受国内、港澳台地区的企业单位及个人的委托	
-							</span>
-						</div>
-					</a>
-				</li>
-				<li>
-					<a class="c2" href="javascript:;">
-						<div class="Service_img">
-							<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
-						</div>
-						<p>武汉知识产权代理有限公司</p>
-						<div class="ts_description ma c2">
-							描述：<span>
-								接受国内、港澳台地区的企业单位及个人的委托	
-							</span>
-						</div>
-					</a>
-				</li>
-			</ul>
+			<div class="zyhp_box">
+				<ul class="clear jsfw_wrap">
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>武汉知识产权代理有限公司</p>
+							<div class="ts_description ma c2">
+								描述：<span>
+									接受国内、港澳台地区的企业单位及个人的委托	
+								</span>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>武汉知识产权代理有限公司</p>
+							<div class="ts_description ma c2">
+								描述：<span>
+									接受国内、港澳台地区的企业单位及个人的委托	
+								</span>
+							</div>
+						</a>
+					</li>
+					<li>
+						<a class="c2" href="javascript:;">
+							<div class="Service_img">
+								<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
+							</div>
+							<p>武汉知识产权代理有限公司</p>
+							<div class="ts_description ma c2">
+								描述：<span>
+									接受国内、港澳台地区的企业单位及个人的委托	
+								</span>
+							</div>
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
 		<!-- 技术服务 end -->
 
@@ -554,19 +558,17 @@
 				};
 			});
 
-			//推荐服务商
-			var $ul1 = $('.server_content ul');
-			var $li1 = $ul1.find('li');
-			var $ulW = ($li1.length*$li1.eq(0).width()/14.8).toFixed(2);
+			// //推荐服务商
+			 var $ul1 = $('.tjfws_wrap');
+			 var $li1 = $ul1.find('li');
+			 var $ulW = $li1.length*(2.8+0.08)-0.08;
 			$ul1[0].style.width = $ulW+"rem";
-			downMove($ul1,$li1);	
 
-			//技术服务
-			var $ul2 = $(".technical_service ul");
-			var $li2 = $ul2.find("li");
-			var $ulW1 = ($li2.length*$li2.eq(0).width()/14.8).toFixed(2);
-			$ul2[0].style.width = $ulW1+"rem";
-			downMove($ul2,$li2);
+			// //技术服务
+			 var $ul2 = $(".jsfw_wrap");
+			 var $li2 = $ul2.find("li");
+			 var $ulW1 = $li2.length*(3.8+0.08)-0.075;
+			 $ul2[0].style.width = $ulW1+"rem";
 		};
 
 		//跳转页面
