--- a/release/project-information.html
+++ b/release/project-information.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en" style="font-size: 50px;"><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=0, user-scalable=no">
@@ -79,7 +80,7 @@
 			<li>
 				<p>融资方式</p>
 				<i></i>
-				<input type="text" disabled="disabled" placeholder="如：股权融资">
+				<input type="text"  placeholder="如：股权融资">
 			</li>
 			<li class="last-li">
 				<p>可提供资料</p>
@@ -92,7 +93,7 @@
 			<li>
 				<p>项目所处阶段</p>
 				<i></i>
-				<input type="text" class="release-input" placeholder="中子期">
+				<input type="text" class="release-input" disabled="disabled" placeholder="中子期">
 				<span><b></b></span>
 			</li>
 			<li>
