--- a/release/results-released.html
+++ b/release/results-released.html
@@ -1,4 +1,5 @@
-butt<html lang="en" style="font-size: 50px;"><head>
+<!DOCTYPE html>
+<html lang="en" style="font-size: 50px;"><head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
@@ -69,36 +70,6 @@ butt<html lang="en" style="font-size: 50px;"><head>
 			</li>
 			<li>
 				<p>支付方式</p>
-				<i></i>
-				<input type="text" disabled="disabled" placeholder="">
-				<span><b></b></span>
-			</li>
-			<li class="last-li">
-				<p>交易方式</p>
-				<i></i>
-				<input type="text" disabled="disabled" placeholder="">
-				<span><b></b></span>
-			</li>
-			<li class="last-li">
-				<p>交易方式</p>
-				<i></i>
-				<input type="text" disabled="disabled" placeholder="">
-				<span><b></b></span>
-			</li>
-			<li class="last-li">
-				<p>交易方式</p>
-				<i></i>
-				<input type="text" disabled="disabled" placeholder="">
-				<span><b></b></span>
-			</li>
-			<li class="last-li">
-				<p>交易方式</p>
-				<i></i>
-				<input type="text" disabled="disabled" placeholder="">
-				<span><b></b></span>
-			</li>
-			<li class="last-li">
-				<p>交易方式</p>
 				<i></i>
 				<input type="text" disabled="disabled" placeholder="">
 				<span><b></b></span>
