--- a/lists/bk-college.html
+++ b/lists/bk-college.html
@@ -40,7 +40,7 @@
 				</div>
 				<div class="bk_college_tab">
 					<!-- 行业专家 start -->
-					<ul>
+					<ul class="clear" style="display: block;">
 						<li>
 							<a href="javascript:;">
 								<div class="figure_head">
@@ -81,7 +81,7 @@
 					<!-- 行业专家 end -->
 
 					<!-- 民间高手 start -->
-					<ul style="display:none;">
+					<ul class="clear">
 						<li>
 							<a href="javascript:;">
 								<div class="figure_head">
@@ -113,7 +113,7 @@
 					<!-- 民间高手 end -->
 
 					<!-- 老师傅 start -->
-					<ul style="display:none;">
+					<ul class="clear">
 						<li>
 							<a href="javascript:;">
 								<div class="figure_head">
@@ -442,13 +442,13 @@
 	<script type="text/javascript">
 		var wrapWidth = $(".list_box").find(".swiper-slide").length*300;
 		$('.list_box .swiper-wrapper').width(wrapWidth+"%");
+		 // var swiper = new Swiper('.article_banner',{
+		 //     pagination: '.pagination',
+		 //     paginationClickable:true,
+		 //     loop:true,
+		 //     autoplay:3000
+		 // });
 
-		// var swiper = new Swiper('.article_banner',{
-		//     pagination: '.pagination',
-		//     paginationClickable:true,
-		//     loop:true,
-		//     autoplay:3000
-		// });
 	</script>
 </body>
 </html>
