--- a/my/account-authentication.html
+++ b/my/account-authentication.html
@@ -27,16 +27,16 @@
 		<ul class="authentication">
 			<li>
 				<p>个人认证</p>
-				<input type="text" placeholder="需要身份证件扫描件或数码照片">
+				<input type="text" placeholder="需要身份证件扫描件或数码照片" disabled="false">
 				<span><b></b></span>
 			</li>
 			<li class="last-li">
 				<p>企业认证</p>
-				<input type="text" placeholder="需要企业相关证件的扫描件或者数码照片">
+				<input type="text" placeholder="需要企业相关证件的扫描件或者数码照片" disabled="false">
 				<span><b></b></span>
 			</li>
 		</ul>
-		<div class="next-button authentication-button">下一步</div>
+		<button class="next-button authentication-button">下一步</button>
 	</section>
 	<!-- content end -->
 
