--- a/my/account-settings.html
+++ b/my/account-settings.html
@@ -46,7 +46,7 @@
 				</span>
 			</li>
 			<li class="setting_item">
-				安全中心
+				账户认证
 			</li>
 		</ul>
 
@@ -55,7 +55,7 @@
 				收支明细
 			</li>
 			<li class="setting_item">
-				账户余额
+				账户充值
 			</li>
 			<li class="setting_item">
 				余额提现
@@ -93,6 +93,8 @@
 		jumpPage($(".account-settings").eq(0).find("li").eq(2),"set-password.html");
 		jumpPage($(".settings_item_num"),"cell_phone_num.html");
 		jumpPage($(".account-settings").eq(0).find("li").eq(1),"information-perfect.html");
+		jumpPage($(".account-settings").eq(0).find("li").eq(4),"account-authentication.html");
+		
 
 		jumpPage($(".account-settings").eq(1).find("li").eq(0),"balance-payments.html");
 		jumpPage($(".account-settings").eq(1).find("li").eq(1),"account-recharge.html");
