--- a/my/information-perfect.html
+++ b/my/information-perfect.html
@@ -63,7 +63,7 @@
 			</li>	
 		</ul>
 		<textarea class="address-msg" placeholder="请填写详细地址，不少于5个字"></textarea>
-		<div class="next-button authentication-button">下一步</div>
+		<button class="info-perf-button set_password_btn ok_withdrawals">下一步</button>
 	</section>
 	<!-- content end -->
 
