--- a/my/my.html
+++ b/my/my.html
@@ -15,9 +15,9 @@
 <body>
 	<!-- head start -->
 	<header class="header psa clear bg-color1">
-		<span class="back-button">
+		<span class="back-button" onclick="history.go(-1)">
 			<i></i>
-			 全部粉丝 
+			 返回 
 		</span>
 	</header>
 	<!-- head end -->
@@ -73,35 +73,35 @@
 		</div>
 		<ul class="jy_list">
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 			<li>
-				<span><i>●</i>数据交换前置开发系统</span>
+				<span><i>○</i>数据交换前置开发系统</span>
 				<span>￥1000.00</span>
 			</li>
 		</ul>
@@ -118,7 +118,7 @@
 		</ul>
 	</footer>
 	<!-- foot end -->
-	<!-- <script type="text/javascript" src="../js/mian.js"></script> -->
+	
 	<script type="text/javascript">
 		//跳转页面
 		jumpPage($(".footer ul").find("li").eq(0),"../index.html");
