样式修复，首页添加消息入口

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 <body>
 	<!-- head start -->
 	<header class="header psa clear">
-		<span class="fl classBtn tc c5 flbtn"><i></i>分类</span>
+		<span class="fl classBtn tc c5 xqbtn"><i></i>发需求</span>
 		<input class="fl rads c2" type="text" name="" placeholder="请输入您要查询的问题"/>
-		<span class="fr classBtn tc c5 xqbtn"><i></i>发需求</span>
+		<span class="fr classBtn tc c5 flbtn">
+			<i></i>消息<b class="show_news_tip"></b>
+		</span>
 	</header>
 	<!-- head end -->
 
