--- a/release/project-information.html
+++ b/release/project-information.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=0, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="format-detection" content="telephone=no">
-	<title>项目信息</title>
+	<title>发布项目信息</title>
 	<link rel="stylesheet" type="text/css" href="../css/reset.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/list.css">
@@ -18,7 +18,7 @@
 	<header class="header psa clear bg-color1 bg-color3">
 		<span class="back-button" onclick="history.go(-1)">
 			<i></i>
-			项目信息
+			发布项目信息
 		</span>
 	</header>
 	<!-- head end -->
@@ -80,11 +80,7 @@
 			<li>
 				<p>融资方式</p>
 				<i></i>
-<<<<<<< HEAD
 				<input type="text" disabled="disabled" placeholder="如：股权融资">
-=======
-				<input type="text"  placeholder="如：股权融资">
->>>>>>> 40518eedc40f8f4b0fc65744b57778cf49b899ea
 			</li>
 			<li class="last-li">
 				<p>可提供资料</p>
@@ -93,15 +89,11 @@
 			</li>
 		</ul>
 		<h2 class="release-title">股权融资</h2>
-		<ul class="authentication release-ul input project-ul">
+		<ul class="authentication release-ul input">
 			<li>
 				<p>项目所处阶段</p>
 				<i></i>
-<<<<<<< HEAD
 				<input type="text" class="release-input" placeholder="中子期">
-=======
-				<input type="text" class="release-input" disabled="disabled" placeholder="中子期">
->>>>>>> 40518eedc40f8f4b0fc65744b57778cf49b899ea
 				<span><b></b></span>
 			</li>
 			<li>
@@ -122,6 +114,7 @@
 				<span><b></b></span>
 			</li>
 		</ul>
+		<div class="next-button release-button">保存</div>
 	</section>
 	<!-- content end -->
 </body></html>
